--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -85,3 +85,10 @@ chart_testing:
   Darwin:
     x86_64: amd64
     arm64: arm64
+cloudflared:
+  Linux:
+    x86_64: amd64
+    aarch64: arm64
+  Darwin:
+    x86_64: amd64
+    arm64: arm64
