--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -92,3 +92,10 @@ cloudflared:
   Darwin:
     x86_64: amd64
     arm64: arm64
+neovim:
+  Linux:
+    x86_64: x86_64
+    aarch64: arm64
+  Darwin:
+    x86_64: x86_64
+    arm64: arm64
