Add support for rain (fixes #5); fixes for uv (fixes #1); fixes for git-checkout-branch

--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -99,3 +99,24 @@ neovim:
   Darwin:
     x86_64: x86_64
     arm64: arm64
+tenv:
+  Linux:
+    x86_64: amd64
+    aarch64: arm64
+  Darwin:
+    x86_64: amd64
+    arm64: arm64
+uv:
+  Linux:
+    x86_64: amd64
+    aarch64: arm64
+  Darwin:
+    x86_64: amd64
+    arm64: arm64
+rain:
+  Linux:
+    x86_64: amd64
+    aarch64: arm64
+  Darwin:
+    x86_64: amd64
+    arm64: arm64
