fixes for ripgrep (fixes #4)

--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -120,3 +120,10 @@ rain:
   Darwin:
     x86_64: amd64
     arm64: arm64
+ripgrep:
+  Linux:
+    x86_64: x86_64
+    aarch64: aarch64
+  Darwin:
+    x86_64: x86_64
+    arm64: aarch64
