--- a/dev_work_bootstrap/tasks/main.yaml
+++ b/dev_work_bootstrap/tasks/main.yaml
@@ -447,21 +447,21 @@
           Accept: application/json
         status_code: 200
       register: ripgrep_latest
+    - name: Set ripgrep facts
+      ansible.builtin.set_fact:
+        ripgrep_dir: "ripgrep-{{ ripgrep_latest.json.tag_name }}-{{ ansible_architecture }}-\
+            {{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-{{ ansible_system | lower }}\
+            {{ '-musl' if ansible_system == 'Linux' else '' }}"
     - name: Install ripgrep
       ansible.builtin.unarchive:
         # ripgrep-14.1.1-x86_64-unknown-linux-musl.tar.gz
         # ripgrep-14.1.1-x86_64-apple-darwin.tar.gz
         # ripgrep-14.1.1-aarch64-apple-darwin.tar.gz
         # ripgrep-14.1.1-aarch64-unknown-linux-gnu.tar.gz
-        src: "https://github.com/BurntSushi/ripgrep/releases/download/\
-          {{ ripgrep_latest.json.tag_name }}/ripgrep-{{ ripgrep_latest.json.tag_name }}-\
-          {{ ansible_architecture }}-{{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-\
-          {{ ansible_system | lower }}{{ '-musl' if ansible_system == 'Linux' else '' }}.tar.gz"
+        src: "https://github.com/BurntSushi/ripgrep/releases/download/{{ ripgrep_latest.json.tag_name }}/{{ ripgrep_dir }}.tar.gz"
         dest: $HOME/.local/bin
         include:
-          - "ripgrep-{{ ripgrep_latest.json.tag_name }}-{{ ansible_architecture }}-\
-            {{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-{{ ansible_system | lower }}\
-            {{ '-musl' if ansible_system == 'Linux' else '' }}/rg"
+          - "{{ ripgrep_dir }}/rg"
         keep_newer: true
         remote_src: true
         mode: "0755"
