inform apt to update cache and to do an upgrade

--- a/dev_work_bootstrap/tasks/debian.yaml
+++ b/dev_work_bootstrap/tasks/debian.yaml
@@ -2,6 +2,8 @@
 - name: Install Debian deps
   become: true
   ansible.builtin.apt:
+    update_cache: true
+    upgrade: "safe"
     name:
       - python3-apt
       - tmux
