--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -141,3 +141,10 @@ tree_sitter:
   Darwin:
     x86_64: x64
     arm64: arm64
+pnpm:
+  Linux:
+    x86_64: x64
+    aarch64: arm64
+  Darwin:
+    x86_64: x64
+    arm64: arm64
