--- a/dev_work_bootstrap/tasks/main.yaml
+++ b/dev_work_bootstrap/tasks/main.yaml
@@ -542,23 +542,28 @@
   tags:
     - gh
   block:
-    - name: Find latest version
+    - name: Find latest version of Github CLI
       ansible.builtin.uri:
         url: https://github.com/cli/cli/releases/latest
         headers:
           Accept: application/json
         status_code: 200
       register: gh_latest
-    - name: Set gh facts
+    - name: Set Github CLI facts
       ansible.builtin.set_fact:
+        # gh_2.67.0_macOS_arm64
+
+        # gh_2.67.0_linux_amd64.tar.gz
+        # gh_2.67.0_linux_arm64.tar.gz
+        # gh_2.67.0_macOS_amd64.zip
+        # gh_2.67.0_macOS_arm64.zip
         gh_dir_name: "gh_{{ gh_latest.json.tag_name | replace('v', '') }}_\
           {{ 'macOS' if ansible_system == 'Darwin' else ansible_system | lower }}_\
           {{ gh[ansible_system][ansible_architecture] }}"
-    - name: Download
+    - name: Download Linux Github CLI
+      when: ansible_system == "Linux"
       ansible.builtin.unarchive:
-        src: "https://github.com/cli/cli/releases/download/\
-          {{ gh_latest.json.tag_name }}/\
-          {{ gh_dir_name }}.tar.gz"
+        src: "https://github.com/cli/cli/releases/download/{{ gh_latest.json.tag_name }}/{{ gh_dir_name }}.tar.gz"
         dest: $HOME/.local/
         include:
           - "{{ gh_dir_name }}/bin/gh"
@@ -567,6 +572,22 @@
           - --strip-components=1
         remote_src: true
         mode: "0755"
+    - name: Download Darwin Github CLI
+      when: ansible_system == "Darwin"
+      ansible.builtin.unarchive:
+        src: "https://github.com/cli/cli/releases/download/{{ gh_latest.json.tag_name }}/{{ gh_dir_name }}.zip"
+        dest: $HOME/.local/
+        include:
+          - "{{ gh_dir_name }}/bin/gh"
+        keep_newer: true
+        extra_opts:
+          - --strip-components=1
+        remote_src: true
+        mode: "0755"
+        creates: $HOME/.local/bin/gh
+    - name: Verify Github CLI  # noqa: no-changed-when
+      ansible.builtin.command:
+        cmd: $HOME/.local/bin/gh --version
 - name: Install taskfile
   tags:
     - taskfile
