--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       matrix:
         os:
-          # During this massive push to get everything working. I'm going to disable the arm64 macos until I can get it working.
+          # During this massive push to get everything working. I'm going to disable the amd64 macos until I can get it working.
           # - macos-13
           - macos-latest
     runs-on: ${{ matrix.os }}
