--- a/dev_work_bootstrap/tasks/main.yaml
+++ b/dev_work_bootstrap/tasks/main.yaml
@@ -463,7 +463,7 @@
       ansible.builtin.set_fact:
         ripgrep_dir: "ripgrep-{{ ripgrep_latest.json.tag_name }}-{{ ripgrep[ansible_system][ansible_architecture] }}-\
             {{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-{{ ansible_system | lower }}\
-            {{ '-musl' if ansible_system == 'Linux' else '' }}"
+            {{ '-musl' if ansible_architecture == 'x86_64' else '-gnu' if ansible_system == 'Linux' else '' }}"
     - name: Install ripgrep
       ansible.builtin.unarchive:
         # ripgrep-14.1.1-x86_64-unknown-linux-musl.tar.gz
