--- a/dev_work_bootstrap/tasks/main.yaml
+++ b/dev_work_bootstrap/tasks/main.yaml
@@ -573,7 +573,7 @@
       when: ansible_system == "Darwin"
       ansible.builtin.unarchive:
         src: "https://github.com/cli/cli/releases/download/{{ gh_latest.json.tag_name }}/{{ gh_dir_name }}.zip"
-        dest: $HOME/.local/
+        dest: $HOME/.local/bin/
         include:
           - "{{ gh_dir_name }}/bin/gh"
         keep_newer: true
